--- a/人事系统接口文档.md
+++ b/人事系统接口文档.md
@@ -74,32 +74,31 @@
 ```json
 [
   {
-    id: '',
-    label: '',
-    icon: '',
-    parentId: '',
-    children: [
-      id: '',
-      label: '',
-      icon: '',
-      parentId: '',
-      children: [...]
+    'id': '',
+    'label': '',
+    'icon': '',
+    'parentId': '',
+    'children': [
+      'id': '',
+      'label': '',
+      'icon': '',
+      'parentId': '',
+      'children': []
     ]
   },
   {
-    id: '',
-    label: '',
-    icon: '',
-    parentId: '',
-    children: [
-      id: '',
-      label: '',
-      icon: '',
-      parentId: '',
-      children: [...]
+    'id': '',
+    'label': '',
+    'icon': '',
+    'parentId': '',
+    'children': [
+      'id': '',
+      'label': '',
+      'icon': '',
+      'parentId': '',
+      'children': []
     ]
-  },
-  ...
+  }
 ]
 ```
 
