--- a/人事系统接口文档.md
+++ b/人事系统接口文档.md
@@ -74,28 +74,15 @@
 ```json
 [
   {
-    'id': '',
-    'label': '',
-    'icon': '',
-    'parentId': '',
+    'id': 'ID',
+    'label': '标题',
+    'icon': '图标',
+    'parentId': '父ID',
     'children': [
-      'id': '',
-      'label': '',
-      'icon': '',
-      'parentId': '',
-      'children': []
-    ]
-  },
-  {
-    'id': '',
-    'label': '',
-    'icon': '',
-    'parentId': '',
-    'children': [
-      'id': '',
-      'label': '',
-      'icon': '',
-      'parentId': '',
+      'id': 'ID',
+      'label': '子标题',
+      'icon': '图标',
+      'parentId': '父ID',
       'children': []
     ]
   }
